add custom dialog, layout for add airline

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -23,7 +23,12 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 
+    <!-- <link rel="stylesheet" href="../node_modules/mdbootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/mdbootstrap/css/mdb.min.css">
+    <link rel="stylesheet" href="../node_modules/mdbootstrap/css/style.css"> -->
     <link rel="stylesheet" href="./styles.css" />
 
     <link
@@ -54,5 +59,9 @@
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"
   ></script>
+
+  <!-- <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
+  <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="../node_modules/mdbootstrap/js/mdb.min.js"></script> -->
 </body>
 </html>
