use icon button for add, edit, delete

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -26,9 +26,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
 
-    <!-- <link rel="stylesheet" href="../node_modules/mdbootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../node_modules/mdbootstrap/css/mdb.min.css">
-    <link rel="stylesheet" href="../node_modules/mdbootstrap/css/style.css"> -->
     <link rel="stylesheet" href="./styles.css" />
 
     <link
@@ -38,6 +35,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 <body>
 
@@ -60,8 +59,5 @@
     crossorigin="anonymous"
   ></script>
 
-  <!-- <script type="text/javascript" src="../node_modules/mdbootstrap/js/popper.min.js"></script>
-  <script type="text/javascript" src="../node_modules/mdbootstrap/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="../node_modules/mdbootstrap/js/mdb.min.js"></script> -->
 </body>
 </html>
